@@ -1376,6 +1376,10 @@ main (int argc, char **argv)
   if (!hosts_count)
     return (EXIT_SUCCESS);
 
+  /* We don't want caching info to output when are doing ranged output */
+  if (hosts_count > 1)
+    prog_data.args->sdr.quiet_cache = 1;
+
   if ((rv = pstdout_launch (prog_data.args->common.hostname,
                             _ipmi_oem,
                             &prog_data)) < 0)
