@@ -1,5 +1,10 @@
 2012-05-16  Albert Chu <chu11@llnl.gov>
 
+	* ipmi-oem/ipmi-oem.c (main), bmc-device/bmc-device.c (main): Turn
+	on quiet caching if doing communication to multiple hosts.
+
+2012-05-16  Albert Chu <chu11@llnl.gov>
+
 	* common/toolcommon/tool-sdr-cache-common.h,
 	common/toolcommon/tool-sdr-cache-common.c (sdr_cache_flush_cache):
 	Do not require ipmi_sdr_ctx_t parameter, create it inside
